<resources>
    //Host name url
    <string name="hostname">https://team11ssis.azurewebsites.net/</string>

    //Login
    <string name="app_name">Stationery Shop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Logic University</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_email">Invalid Email</string>

    //Navigation
    <string name="nav_bar_header">Stationery Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Shared Preferences
    <string name="preference_file_key">login_preferences</string>

    //Menu Items
    <string name="menu_requisition_approval">Requisition Approval</string>
    <string name="menu_delegation">Delegation</string>
    <string name="menu_requisition">Requisition</string>
    <string name="menu_department_collection">Collection</string>
    <string name="menu_store_retrieval">Retrieval</string>
    <string name="menu_store_collection">Collection</string>
    <string name="menu_stock_adjustment">Stock Adjustment</string>
    <string name="menu_stock_adjustment_approval">Stock Adjustment Approval</string>
    <string name="logout">Logout</string>
    <string name="user_action">User Actions</string>
</resources>
